Fix [UI] Filters row broken in small resolutions

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,7 +50,7 @@ body {
 
   @include jobsFlex;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1300px) {
     padding: 15px 64px 30px;
   }
 
@@ -787,7 +787,11 @@ main {
     margin-left: 20px;
 
     .action-button {
-      width: 160px;
+      white-space: nowrap;
+
+      @media screen and (min-width: 1300px) {
+        min-width: 160px;
+      }
 
       &:not(:last-of-type) {
         margin-right: 10px;
